tests/type_errors/adding_strings_is_not_allowed.sy
mod A


def i
  : forall a. let Num a. a -> a
  : a = a + a

-- NOTE: this program will compile `i ' "ABC"` because the indirection discards the requirements
def main : Str = i "ABC"

--+ expected stderr:
--+ lua: stdin:101: attempt to add a 'string' with a 'string'
--+ stack traceback:
--+ 	[C]: in metamethod 'add'
--+ 	stdin:101: in function <stdin:101>
--+ 	stdin:105: in function '_0_A_i'
--+ 	stdin:109: in main chunk
--+ 	[C]: in ?

